--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,24 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_language">Language</string>
+
+    <string name="nav_slogan">Which hotel are you?</string>
+    <string name="nav_email">office@hotelmap.bg</string>
+    <string name="nav_hotel">Hotels</string>
+    <string name="nav_sights">Sights</string>
+    <string name="nav_shops">Shops</string>
+    <string name="nav_events">Events</string>
+    <string name="nav_around">Around me</string>
+    <string name="nav_scan">Scan</string>
+    <string name="nav_about">About us</string>
+    <string name="nav_register">Register</string>
+
+    <string-array name="fragment_selection_array">
+        <item>Map</item>
+        <item>Gallery</item>
+        <item>Offers</item>
+    </string-array>
+
 </resources>
