Added Gallery and the ability to switch view on item click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="around_dialog_title">Search Around Me</string>
     <string name="nav_currency">Currency</string>
     <string name="nav_discount">Reserve with discount</string>
+
     <string name="gal_around_me">Around Me</string>
     <string name="gal_info">Information</string>
     <string name="gal_site">Website</string>
@@ -35,6 +36,8 @@
     <string name="gal_desc_building">Building image</string>
     <string name="gal_desc_type">The type of item</string>
     <string name="gal_desc_currency">Currency</string>
+    <string name="gal_phone">Ph.: %1$s</string>
+
     <string name="spl_logo">Logo</string>
     <string name="spl_hotels">Hotels</string>
     <string name="spl_sights">Sights</string>
